crates/core/tests/snapshots/fixture__fy2026_text.snap
---
source: crates/core/tests/fixture.rs
expression: "render_text(&built.docs[1])"
---
Statement of Financial Performance
                                                        2026        2025
 Revenue                                                                
   Sales                                             103,412      87,643  [rounding -1 / +1]
   Interest received                                      52          34
=Total revenue                                       103,464      87,677
 Expenses                                                               
   Accountancy fees                                    1,920       1,851
   Bank fees                                             310         238
   Depreciation                                        7,285       2,775
   Insurance                                           2,299       2,150
   Interest paid                                       1,411       1,625
   Motor vehicle expenses                              5,227       3,962
   Rent                                               16,380      15,600
   Repairs and maintenance                                 0         811  [rounding +0 / -1]
   Wages                                              35,100      31,200
   General expenses                                      632         580
=Total expenses                                       70,564      60,792
=Net profit for the year                              32,900      26,885

Statement of Financial Position
                                                        2026        2025
 Assets                                                                 
   Current assets                                                       
     Bank accounts                                    48,599      38,350
     Accounts receivable                              10,701       8,522
=  Total current assets                               59,300      46,872
   Non-current assets                                                   
     Property, plant and equipment                    31,897      15,725
=  Total non-current assets                           31,897      15,725
=Total assets                                         91,197      62,597
 Liabilities                                                            
   Current liabilities                                                  
     Accounts payable                                    100         212  [rounding +1 / +0]
     GST payable                                          12           0
     Shareholder current account                       1,800       3,000
=  Total current liabilities                           1,912       3,212
   Non-current liabilities                                              
     Term loan                                        19,500      22,500
=  Total non-current liabilities                      19,500      22,500
=Total liabilities                                    21,412      25,712
=Net assets                                           69,785      36,885
 Equity                                                                 
   Share capital                                      10,000      10,000
   Retained earnings                                  26,885           0
   Net profit for the year                            32,900      26,885
=Total equity                                         69,785      36,885

warning: RoundingFallback { column: Current, row: LineKey("revenue"), line: LineKey("sales") }
warning: RoundingFallback { column: Prior, row: LineKey("revenue"), line: LineKey("sales") }
