crates/core/tests/snapshots/fixture__trial_balances.snap
---
source: crates/core/tests/fixture.rs
expression: "tbs.join(\"\\n\")"
---
Closing TB at 2025-03-31
100      -87,642.35
110          -34.17
200        1,850.50
205          237.75
210        2,774.93
215        2,149.60
220        1,625.45
225.01        3,112.18
225.02          849.90
230       15,600.00
235          811.73
240       31,200.00
290          579.53
600       38,316.22
605           34.17
610        8,522.25
700       18,499.50
705       -2,774.93
800         -211.85
810           -0.41
830       -3,000.00
900      -22,500.00
950      -10,000.00

Closing TB at 2026-03-31
100     -103,412.60
110          -51.60
200        1,920.40
205          310.40
210        7,284.67
215        2,299.20
220        1,410.70
225.01        4,022.45
225.02        1,204.49
230       16,380.00
240       35,100.00
290          631.84
600       48,513.45
605           85.77
610       10,700.74
700       18,499.50
705       -5,133.67
710       23,456.78
715       -4,925.93
800          -99.30
810          -12.34
830       -1,800.00
900      -19,500.00
950      -10,000.00
960      -26,884.95
